Fix: Overlapping issue of header with timeline

--- a/src/app/components/templates/time-voyage/time-voyage.component.html
+++ b/src/app/components/templates/time-voyage/time-voyage.component.html
@@ -2,6 +2,6 @@
   <app-headers></app-headers>
 
   <app-time-interface
-    class="d-block flex-grow-1 overflow-horizontal p-3"
+    class="d-block flex-grow-1 overflow-auto p-3"
   ></app-time-interface>
 </div>
