--- a/src/app/components/molecules/event-card/event-card.component.html
+++ b/src/app/components/molecules/event-card/event-card.component.html
@@ -1,7 +1,14 @@
 <!-- Year count -->
 <h6 class="year-text text-center mb-5" *ngIf="year">
   {{ year }}
-  <span class="cursor-pointer" *ngIf="yearPresentInBetweenTheTimeline.length" (click)="showMore(true)"> (*)</span>
+  <span
+    class="cursor-pointer extra-events-text text-primary"
+    title="More Eeents between these years!"
+    *ngIf="yearPresentInBetweenTheTimeline.length"
+    (click)="showMore(true)"
+  >
+    (>)</span
+  >
 </h6>
 
 <!-- Show more button -->
