fixed typo mistakes

--- a/src/app/components/molecules/event-card/event-card.component.html
+++ b/src/app/components/molecules/event-card/event-card.component.html
@@ -3,7 +3,7 @@
   {{ year }}
   <span
     class="cursor-pointer extra-events-text text-primary"
-    title="More Eeents between these years!"
+    title="More Events between these years!"
     *ngIf="yearPresentInBetweenTheTimeline.length"
     (click)="showMore(true)"
   >
